Prevent dropdown from being cut off.

--- a/graylog2-web-interface/src/views/components/messagelist/decorators/decoratorStyles.css
+++ b/graylog2-web-interface/src/views/components/messagelist/decorators/decoratorStyles.css
@@ -53,7 +53,7 @@
 
 :local(.decoratorListContainer) {
     display: inline-block;
-    overflow-y: auto;
+    overflow: visible;
     width: 100%;
 }
 
